# todomvc-web-test

./: .gitignore  config.local.env.example  config.prod.env  config.py  config.stage.env  pyproject.toml
etc/selenoid/: compose.yaml
tests/: conftest.py  operations_at_filter_all_test.py  workflow_test.py
todomvc_web_test/: __init__.py
todomvc_web_test/model/: __init__.py  todomvc.py
