[tool.poetry]
name = "todomvc-web-test"
version = "0.1.0"
description = "Web-UI tests for TodoMVC on Python+Pytest+Selene+ Allure reports"
authors = ["Tetiana977 <tatjana.zorenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selene = {version = "^1.0.2", allow-prereleases = true}
pydantic = "^1.8.1"
python-dotenv = "^0.16.0"
pytest-xdist = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
